<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchbox_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/searchbox_options_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchbox_menu_options_title" />

    <LinearLayout
        android:id="@+id/searchbox_options_appearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchbox_options_appearance_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchbox_menu_options_appearance_header" />

        <ExpandableListView
            android:id="@+id/serachbox_options_appearance_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:headerDividersEnabled="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchbox_options_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchbox_options_save_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchbox_menu_options_save_place" />

        <Button
            android:id="@+id/searchbox_options_help_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchbox_menu_options_show_help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchbox_options_map_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchbox_options_map_settings_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <LinearLayout
            android:id="@+id/searchbox_options_stream"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/searchbox_options_stream_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/searchbox_options_stream_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_stream_title" />

                <TextView
                    android:id="@+id/searchbox_options_stream_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_stream_description" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/searchbox_options_stream_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchbox_options_store_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/searchbox_options_store_data_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/searchbox_options_store_data_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_store_data_title" />

                <TextView
                    android:id="@+id/searchbox_options_store_data_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_store_data_description" />
            </LinearLayout>

            <ToggleButton
                android:id="@+id/searchbox_options_store_data_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchbox_options_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/searchbox_options_store_data_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/searchbox_options_clear_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_clear_title" />

                <TextView
                    android:id="@+id/searchbox_options_clear_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/searchbox_menu_options_clear_description" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/searchbox_options_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_delete" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>